fix not wrapping tournaments

--- a/src/components/tournaments/Tournaments.module.scss
+++ b/src/components/tournaments/Tournaments.module.scss
@@ -5,6 +5,7 @@
 
     .tabsList {
         @extend %tabsList;
+        flex-wrap: wrap;
 
         .tab {
             @extend %tab;
